--- a/css/ascellayn.css
+++ b/css/ascellayn.css
@@ -13,3 +13,7 @@ ul > li > div {
     border-radius: 1rem;
     padding: 0rem 1rem 1rem 1rem;
 }
+
+@media only screen and (max-width: 1280px) {
+    body { width: 90%; }
+}
